--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,5 @@
 {
     "require": {
-        "guzzlehttp/guzzle": "^7.3",
-        "symfony/dom-crawler": "^5.3",
-        "symfony/css-selector": "^5.3"
+        "guzzlehttp/guzzle": "^7.3"
     }
 }
